--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="shortcut icon" type="image/png" href="/favicon.png"> -->
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168246496-1"></script>
