--- a/_includes/news.html
+++ b/_includes/news.html
@@ -7,8 +7,8 @@
 <span>Derya Akbaba, Devin Lange, Michael Correll, Alexander Lex, Miriah Meyer</span><br>
 <span>SIGCHI Conference on Human Factors in Computing Systems (CHI) (to appear), 2023</span><br>
 <span><a href="https://osf.io/5y7ar/">paper</a> <a
-        href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
-        href="https://osf.io/cvrbs/">supplemental material</a></span>
+                href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
+                href="https://osf.io/cvrbs/">supplemental material</a></span>
 
 <br>
 <br>
@@ -17,8 +17,8 @@
 <span>Haihan Lin, Derya Akbaba, Miriah Meyer, Alexander Lex</span><br>
 <span>IEEE Transactions on Visualization and Computer Graphics, 2022</span><br>
 <span><a href="https://ieeexplore.ieee.org/document/9903288">paper</a> <a
-        href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
-        href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a></span>
+                href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
+                href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a></span>
 
 <br>
 <br>
@@ -27,7 +27,7 @@
 <span>Derya Akbaba, Jack Wilburn, Main T. Nance, Miriah Meyer</span><br>
 <span>alt.VIS, a workshop co-located with IEEE VIS, 2021</span><br>
 <span><a href="https://altvis.github.io/papers/2021/akbaba.pdf">paper</a> <a href="https://chartjunk.art/">performance
-        art as website</a></span>
+                art as website</a></span>
 
 
 
@@ -40,5 +40,5 @@
 <p>Presenting my first first author <a href="https://osf.io/5y7ar/">publication</a> at CHI 2023!</p>
 
 <strong>March 2023</strong>
-<p>Wrote down my <a href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work"></a>thoughts about qual
-    work in vis</p>
+<p>Wrote down my <a href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">thoughts</a> about qual
+        work in vis</p>
