Visitng ITU Copenhagen

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -36,6 +36,9 @@
 <br>
 
 <h2>news</h2>
+<strong>May 2023</strong>
+<p>Visiting and presenting at the HCDS group and hdilab @ ITU Copenhagen.</p>
+
 <strong>April 2023</strong>
 <p>Presenting my first first author <a href="https://osf.io/5y7ar/">publication</a> at CHI 2023!</p>
 
