--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,10 +3,10 @@
 
 <h2>publications</h2>
 
-<span><strong>Collaboration: Matters of Care for Visualization Design Study</strong></span><br>
+<span><strong>Troubling Collaboration: Matters of Care for Visualization Design Study</strong></span><br>
 <span>Derya Akbaba, Devin Lange, Michael Correll, Alexander Lex, Miriah Meyer</span><br>
 <span>SIGCHI Conference on Human Factors in Computing Systems (CHI) (to appear), 2023</span><br>
-<span><a href="https://osf.io/5y7ar/">paper</a> <a
+<span><a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">paper</a> <a
                 href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
                 href="https://osf.io/cvrbs/">supplemental material</a></span>
 
