--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,10 @@ h2 {
   }
 
   a:hover {
-    background-color: #adb5bdcf;
+    /* background-color: #adb5bdcf; */
+    text-decoration: underline;
+    background-color: none;
+    text-decoration-style: wavy;
   }
 
   /* ABOUT PAGE */
