Make yellow darker

--- a/_includes/popover.html
+++ b/_includes/popover.html
@@ -9,7 +9,7 @@
 
     // For fun, assign links a different color
     const allLinks = document.querySelectorAll('a');
-    var colorArray = ['#62CD88', '#FADF96', '#F0918E', '#ED73D0', '#A88DF8', '#9FCEFB'];
+    var colorArray = ['#62CD88', '#ffc527', '#F0918E', '#ED73D0', '#A88DF8', '#9FCEFB'];
 
     allLinks.forEach(link => {
         const randomColor = colorArray[Math.floor(Math.random() * colorArray.length)]
