--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 :root {
   /* VAPORWAVE */
   --green: #62CD88;
-  --yellow: #FADF96;
+  --yellow: #ffc527;
   --orange: #F0918E;
   --pink: #ED73D0;
   --purple: #A88DF8;
