Update news section

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -5,7 +5,7 @@
 
 <span><strong>Troubling Collaboration: Matters of Care for Visualization Design Study</strong></span><br>
 <span>Derya Akbaba, Devin Lange, Michael Correll, Alexander Lex, Miriah Meyer</span><br>
-<span>SIGCHI Conference on Human Factors in Computing Systems (CHI) (to appear), 2023</span><br>
+<span>In Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (CHI '23), 2023</span><br>
 <span><a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">paper</a> <a
                 href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
                 href="https://osf.io/cvrbs/">supplemental material</a></span>
@@ -36,12 +36,13 @@
 <br>
 
 <h2>news</h2>
-<strong>May 2023</strong>
+<strong>May 2023</strong>, Denmark
 <p>Visiting and presenting at the HCDS group and hdilab @ ITU Copenhagen.</p>
 
-<strong>April 2023</strong>
-<p>Presenting my first first author <a href="https://osf.io/5y7ar/">publication</a> at CHI 2023!</p>
+<strong>April 2023</strong>, Germany
+<p>Presenting my first first author <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">publication</a> at CHI
+        2023, in Hamburg.</p>
 
-<strong>March 2023</strong>
+<strong>March 2023</strong>, virtual
 <p>Wrote down my <a href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">thoughts</a> about qual
         work in vis</p>
