Add VIS short paper

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,15 @@
 
 <h2>publications</h2>
 
+<span><strong>"Two Heads are Better than One": Pair-Interviews for Visualization</strong></span><br>
+<span>Derya Akbaba, Miriah Meyer</span><br>
+<span>IEEE Transactions on Visualization and Computer Graphics, 2023 (to appear)</span><br>
+<span><a href="https://osf.io/h793u/">pre-print</a> <a
+                href="https://gotdairyya.github.io/pair-interview-primer/mechanics/">supplemental material</a></span>
+
+<br>
+<br>
+
 <span><strong>Troubling Collaboration: Matters of Care for Visualization Design Study</strong></span><br>
 <span>Derya Akbaba, Devin Lange, Michael Correll, Alexander Lex, Miriah Meyer</span><br>
 <span>In Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (CHI '23), 2023</span><br>
