--- a/_includes/news.html
+++ b/_includes/news.html
@@ -45,6 +45,10 @@
 <br>
 
 <h2>news</h2>
+<strong>Aug 2023</strong>, Australia + Scotland
+<p>Will be presenting at <a href="https://ieeevis.org/year/2023/welcome">IEEE VIS</a> in Melbourne & <a
+                href="https://informationplusconference.com/2023/">Info+</a> in Edinburgh</p>
+
 <strong>May 2023</strong>, Denmark
 <p>Visiting and presenting at the HCDS group and hdilab @ ITU Copenhagen.</p>
 
@@ -52,6 +56,6 @@
 <p>Presenting my first first author <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">publication</a> at CHI
         2023, in Hamburg.</p>
 
-<strong>March 2023</strong>, virtual
+<!-- <strong>March 2023</strong>, virtual
 <p>Wrote down my <a href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">thoughts</a> about qual
-        work in vis</p>
+        work in vis</p> -->
