--- a/_includes/news.html
+++ b/_includes/news.html
@@ -47,7 +47,7 @@
 <h2>news</h2>
 <strong>Aug 2023</strong>, Australia + Scotland
 <p>Will be presenting at <a href="https://ieeevis.org/year/2023/welcome">IEEE VIS</a> in Melbourne & <a
-                href="https://informationplusconference.com/2023/">Info+</a> in Edinburgh</p>
+                href="https://informationplusconference.com/2023/">Info+</a> in Edinburgh.</p>
 
 <strong>May 2023</strong>, Denmark
 <p>Visiting and presenting at the HCDS group and hdilab @ ITU Copenhagen.</p>
