--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,60 +2,20 @@
 <br>
 
 <h2>publications</h2>
-
-<span><strong>"Two Heads are Better than One": Pair-Interviews for Visualization</strong></span><br>
-<span>Derya Akbaba, Miriah Meyer</span><br>
-<span>IEEE Transactions on Visualization and Computer Graphics, 2023 (to appear)</span><br>
-<span><a href="https://osf.io/h793u/">pre-print</a> <a
-                href="https://gotdairyya.github.io/pair-interview-primer/mechanics/">supplemental material</a></span>
-
-<br>
-<br>
-
-<span><strong>Troubling Collaboration: Matters of Care for Visualization Design Study</strong></span><br>
-<span>Derya Akbaba, Devin Lange, Michael Correll, Alexander Lex, Miriah Meyer</span><br>
-<span>In Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (CHI '23), 2023</span><br>
-<span><a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">paper</a> <a
-                href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
-                href="https://osf.io/cvrbs/">supplemental material</a></span>
+{% for pub in site.data.publications limit:4 %}
+<span><strong>{{pub.title}}</strong></span><br>
+<span>{{pub.authors}}</span><br>
+<span>{{pub.journal}}, {{pub.year}}</span><br>
+<span>{{pub.links}}</span>
 
 <br>
 <br>
+{% endfor %}
 
-<span><strong>Data Hunches: Incorporating Personal Knowledge into Visualizations</strong></span><br>
-<span>Haihan Lin, Derya Akbaba, Miriah Meyer, Alexander Lex</span><br>
-<span>IEEE Transactions on Visualization and Computer Graphics, 2022</span><br>
-<span><a href="https://ieeexplore.ieee.org/document/9903288">paper</a> <a
-                href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
-                href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a></span>
-
-<br>
-<br>
-
-<span><strong>Manifesto for Putting 'Chartjunk' in the Trash 2021!</strong></span><br>
-<span>Derya Akbaba, Jack Wilburn, Main T. Nance, Miriah Meyer</span><br>
-<span>alt.VIS, a workshop co-located with IEEE VIS, 2021</span><br>
-<span><a href="https://altvis.github.io/papers/2021/akbaba.pdf">paper</a> <a href="https://chartjunk.art/">performance
-                art as website</a></span>
-
-
-
-<br>
-<br>
 <br>
 
 <h2>news</h2>
-<strong>Aug 2023</strong>, Australia + Scotland
-<p>Will be presenting at <a href="https://ieeevis.org/year/2023/welcome">IEEE VIS</a> in Melbourne & <a
-                href="https://informationplusconference.com/2023/">Info+</a> in Edinburgh.</p>
-
-<strong>May 2023</strong>, Denmark
-<p>Visiting and presenting at the HCDS group and hdilab @ ITU Copenhagen.</p>
-
-<strong>April 2023</strong>, Germany
-<p>Presenting my first first author <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">publication</a> at CHI
-        2023, in Hamburg.</p>
-
-<!-- <strong>March 2023</strong>, virtual
-<p>Wrote down my <a href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">thoughts</a> about qual
-        work in vis</p> -->
+{% for news in site.data.news limit:3 %}
+<strong>{{news.date | date: "%b %Y"}}</strong>, {{news.place}}
+<p>{{news.news}}</p>
+{% endfor %}
